Implement full PathWatcher-style process IDS architecture
Complete the two-phase fingerprinting/eventing flow that was scaffolded
in 2017, mirroring the PathWatcher architecture:

- ProcessWatcher facade with handler registries (started/terminated/
  suspicious), whitelist config and producer-queue-consumer lifecycle
- FingerprintStore implementing the learning window and user|command
  baseline, plus regex whitelisting
- Scan-and-diff producers: NATIVE_PROCESS_API via JDK ProcessHandle
  (default) and POLL_PROCESS_EXEC via headerless ps -eo (fallback)
- ProcessEventsConsumer qualifying discovered processes against the
  baseline and invoking handlers with naive DEFCON1-4 threat grading
- ProcessWorkerMap (pid keyed) for liveness diffing, mirroring
  FileWorkerMap

Remove the unmaintained Sigar dependency, its bundled native libraries
and the runtime library-download hack, and raise the baseline to
Java 17. Repository URLs updated to https, matching PathWatcher.

Covered by unit tests and an end-to-end canary test that fingerprints
the system, spawns an unknown process and asserts the suspicious event
with DEFCON grading, plus whitelist and ps scanner mode tests.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_017HKQ2uEzazNmTPvFJyR392